--- a/zeroshot.ipynb
+++ b/zeroshot.ipynb
@@ -2,41 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9 µs, sys: 1 µs, total: 10 µs\n",
-      "Wall time: 11.9 µs\n"
+      "CPU times: user 4.57 ms, sys: 0 ns, total: 4.57 ms\n",
+      "Wall time: 3.81 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "import zero_shot\n",
+    "from importlib import reload\n",
+    "zero_shot = reload(zero_shot)\n",
     "import eval\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Explicitly passing a `revision` is encouraged when loading a model with custom code to ensure no malicious code has been contributed in a newer revision.\n",
+      "/opt/conda/envs/cs197-env/lib/python3.9/site-packages/torchvision/transforms/transforms.py:287: UserWarning: Argument interpolation should be of type InterpolationMode instead of int. Please, use InterpolationMode enum.\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inferring model ./checkpoints/chexzero_weights/best_64_0.0001_original_16000_0.861.pt\n"
+      "Inferring model ./checkpoints/pt-imp/checkpoint_11900_LIT_CXBERT.pt\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6974cc7c34b64aab836515c0c9515e45",
+       "model_id": "5ef16503237542838a06982c95aea8e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -48,60 +59,26 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa0f981f4db94c5cb40b16f1a759d320",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/500 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "505785cccb884e088f061de9076f99fa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/13 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "230daa6e9cf4455eae3f416a10d3bf86",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/500 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 2min 20s, sys: 8.36 s, total: 2min 29s\n",
-      "Wall time: 2min 19s\n"
+     "ename": "AttributeError",
+     "evalue": "'Tensor' object has no attribute 'input_ids'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "File \u001b[0;32m<timed exec>:7\u001b[0m\n",
+      "File \u001b[0;32m~/cs197-final-project/zero_shot.py:440\u001b[0m, in \u001b[0;36mensemble_models\u001b[0;34m(model_paths, cxr_filepath, cxr_labels, cxr_pair_template, cache_dir, save_name)\u001b[0m\n\u001b[1;32m    438\u001b[0m \u001b[39melse\u001b[39;00m: \u001b[39m# cached prediction not found, compute preds\u001b[39;00m\n\u001b[1;32m    439\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mInferring model \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(path))\n\u001b[0;32m--> 440\u001b[0m     y_pred \u001b[39m=\u001b[39m run_softmax_eval(model, loader, cxr_labels, cxr_pair_template)\n\u001b[1;32m    441\u001b[0m     \u001b[39mif\u001b[39;00m cache_dir \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m: \n\u001b[1;32m    442\u001b[0m         Path(cache_dir)\u001b[39m.\u001b[39mmkdir(exist_ok\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, parents\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m~/cs197-final-project/zero_shot.py:255\u001b[0m, in \u001b[0;36mrun_softmax_eval\u001b[0;34m(model, loader, eval_labels, pair_template, context_length)\u001b[0m\n\u001b[1;32m    252\u001b[0m neg \u001b[39m=\u001b[39m pair_template[\u001b[39m1\u001b[39m]\n\u001b[1;32m    254\u001b[0m \u001b[39m# get pos and neg predictions, (num_samples, num_classes)\u001b[39;00m\n\u001b[0;32m--> 255\u001b[0m pos_pred \u001b[39m=\u001b[39m run_single_prediction(eval_labels, pos, model, loader, \n\u001b[1;32m    256\u001b[0m                                  softmax_eval\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, context_length\u001b[39m=\u001b[39;49mcontext_length) \n\u001b[1;32m    257\u001b[0m neg_pred \u001b[39m=\u001b[39m run_single_prediction(eval_labels, neg, model, loader, \n\u001b[1;32m    258\u001b[0m                                  softmax_eval\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, context_length\u001b[39m=\u001b[39mcontext_length) \n\u001b[1;32m    260\u001b[0m \u001b[39m# compute probabilities with softmax\u001b[39;00m\n",
+      "File \u001b[0;32m~/cs197-final-project/zero_shot.py:197\u001b[0m, in \u001b[0;36mrun_single_prediction\u001b[0;34m(cxr_labels, template, model, loader, softmax_eval, context_length)\u001b[0m\n\u001b[1;32m    180\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    181\u001b[0m \u001b[39mFUNCTION: run_single_prediction\u001b[39;00m\n\u001b[1;32m    182\u001b[0m \u001b[39m--------------------------------------\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    194\u001b[0m \u001b[39mReturns list, predictions from the given template. \u001b[39;00m\n\u001b[1;32m    195\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    196\u001b[0m cxr_phrase \u001b[39m=\u001b[39m [template]\n\u001b[0;32m--> 197\u001b[0m zeroshot_weights \u001b[39m=\u001b[39m zeroshot_classifier(cxr_labels, cxr_phrase, model, context_length\u001b[39m=\u001b[39;49mcontext_length)\n\u001b[1;32m    198\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mReaching here\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    199\u001b[0m y_pred \u001b[39m=\u001b[39m predict(loader, model, zeroshot_weights, softmax_eval\u001b[39m=\u001b[39msoftmax_eval)\n",
+      "File \u001b[0;32m~/cs197-final-project/zero_shot.py:118\u001b[0m, in \u001b[0;36mzeroshot_classifier\u001b[0;34m(classnames, templates, model, context_length)\u001b[0m\n\u001b[1;32m    116\u001b[0m texts \u001b[39m=\u001b[39m [template\u001b[39m.\u001b[39mformat(classname) \u001b[39mfor\u001b[39;00m template \u001b[39min\u001b[39;00m templates] \u001b[39m# format with class\u001b[39;00m\n\u001b[1;32m    117\u001b[0m texts \u001b[39m=\u001b[39m clip\u001b[39m.\u001b[39mtokenize(texts, context_length\u001b[39m=\u001b[39mcontext_length) \u001b[39m# tokenize\u001b[39;00m\n\u001b[0;32m--> 118\u001b[0m class_embeddings \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39;49mencode_text(texts) \u001b[39m# embed with text encoder\u001b[39;00m\n\u001b[1;32m    120\u001b[0m \u001b[39m# normalize class_embeddings\u001b[39;00m\n\u001b[1;32m    121\u001b[0m class_embeddings \u001b[39m/\u001b[39m\u001b[39m=\u001b[39m class_embeddings\u001b[39m.\u001b[39mnorm(dim\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, keepdim\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m~/cs197-final-project/model.py:393\u001b[0m, in \u001b[0;36mCLIP.encode_text\u001b[0;34m(self, text)\u001b[0m\n\u001b[1;32m    380\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mencode_text\u001b[39m(\u001b[39mself\u001b[39m, text):\n\u001b[1;32m    381\u001b[0m     \u001b[39m# x = self.token_embedding(text).type(self.dtype)  # [batch_size, n_ctx, d_model]\u001b[39;00m\n\u001b[1;32m    382\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    390\u001b[0m     \u001b[39m# take features from the eot embedding (eot_token is the highest number in each sequence)\u001b[39;00m\n\u001b[1;32m    391\u001b[0m     \u001b[39m# x = x[torch.arange(x.shape[0]), text.argmax(dim=-1)] @ self.text_projection\u001b[39;00m\n\u001b[0;32m--> 393\u001b[0m     x \u001b[39m=\u001b[39m text\u001b[39m.\u001b[39;49minput_ids\n\u001b[1;32m    394\u001b[0m     x \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtransformer\u001b[39m.\u001b[39mmodel\u001b[39m.\u001b[39mget_projected_text_embeddings(x, text\u001b[39m.\u001b[39mattention_mask) \u001b[39m@\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtext_projection\n\u001b[1;32m    395\u001b[0m     \u001b[39mreturn\u001b[39;00m x\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Tensor' object has no attribute 'input_ids'"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "model_paths = ['./checkpoints/chexzero_weights/best_64_0.0001_original_16000_0.861.pt']\n",
-    "cxr_filepath = './data/chexpert_test.h5'\n",
+    "model_paths = ['./checkpoints/pt-imp/checkpoint_11900_LIT_CXBERT.pt']\n",
+    "cxr_filepath = '/home/ec2-user/cs197-final-project/data/chexpert_test.h5'\n",
     "cxr_labels = pd.read_csv(\"./data/CheXpert/test_labels.csv\").columns.tolist()[2:]\n",
     "cxr_pair_template = (\"{}\", \"no {}\")\n",
     "cache_dir = None\n",
@@ -885,7 +862,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.3 ('chexzero-env': venv)",
+   "display_name": "Python 3.9.13 ('cs197-env')",
    "language": "python",
    "name": "python3"
   },
@@ -899,12 +876,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "fa4e83605218bd08dc124b5d61ef5601fd58240bfd03eb91411297950ddf0944"
+    "hash": "c93e52db51751613a550353dead6d0021e7a9d84fe2fe27dabd18227a33af756"
    }
   }
  },
